using UnityEngine;

namespace My2D
{
    //애니메이션 파라미터를 관리하는 클래스
    public class AnimationString
    {
        public static string isMoving = "IsMoving";
        public static string isRunning = "IsRunning";
        public static string jumpTrriger = "Jump";
        public static string yVelocity = "YVelocity";
        public static string isGround = "IsGround";
        public static string isCelling = "IsCelling";
        public static string isWall = "IsWall";
        public static string attackTrriger = "Attack";
    }

}
